# kaggle_titanic

./: .gitignore  README.md  make.bat  pyproject.toml  requirements.txt  split_data.py  submission.csv  titanic.ipynb
input/titanic/: test_sampled.csv  train_sampled.csv
mlartifacts/969349413620753544/067cfc5164a342a0a21add04892b978f/artifacts/: estimator.html
mlartifacts/969349413620753544/2dcf31ae5ed14eff9b3de87f679c9770/artifacts/: estimator.html  metric_info.json
mlartifacts/969349413620753544/4961d436a955499d93a6461e9b322ef0/artifacts/: estimator.html
mlruns/0/: meta.yaml
mlruns/0/03e244bf954c4c89a52808a70a465c66/: meta.yaml
mlruns/0/03e244bf954c4c89a52808a70a465c66/artifacts/: estimator.html  metric_info.json
mlruns/0/03e244bf954c4c89a52808a70a465c66/metrics/: Pipeline_score_X  c  training_accuracy_score  training_f1_score  training_log_loss  training_precision_score  training_roc_auc  training_score
mlruns/0/03e244bf954c4c89a52808a70a465c66/params/: categorical_cols  categorical_cols__ordinalEn  categorical_cols__transformers  steps
mlruns/0/03e244bf954c4c89a52808a70a465c66/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/1f418b5adce84c049ff8e616cfe4c423/: meta.yaml
mlruns/0/1f418b5adce84c049ff8e616cfe4c423/metrics/: c
mlruns/0/1f418b5adce84c049ff8e616cfe4c423/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
mlruns/0/bc36878a565b4b21b5df030185b694b5/: meta.yaml
mlruns/0/bc36878a565b4b21b5df030185b694b5/metrics/: c
mlruns/0/bc36878a565b4b21b5df030185b694b5/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/d97beb7d44b447faa9704b7825ef5323/: meta.yaml
mlruns/0/d97beb7d44b447faa9704b7825ef5323/tags/: mlflow.runName
mlruns/0/datasets/56df04aad886b8e426bedb54d97ae14c/: meta.yaml
mlruns/0/e170d36768c24ae0858cbd60fa70d44e/: meta.yaml
mlruns/0/e170d36768c24ae0858cbd60fa70d44e/metrics/: c
mlruns/0/fa8422c1982744578ccd86e1cd108c2d/: meta.yaml
mlruns/0/fa8422c1982744578ccd86e1cd108c2d/metrics/: c
scripts/: split_data.py
working/: kernel-metadata.json  submission.csv  titanic.ipynb
(+31 files in other folders)
