[tool.poetry]
name = "kaggle-titanic"
version = "0.1.0"
description = ""
authors = ["Gaetan Dubuc <gaet.dub1@gmail.com>"]
readme = "README.md"
packages = [{ include = "kaggle_titanic" }]

[tool.poetry.dependencies]
python = ">=3.11 <3.12"
jaxlib = "^0.4.13"
mlflow = "^2.4.1"
plotly = "^5.15.0"
tensorflow-io = "0.31.0"
tensorflow = "^2.13.0"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
kaggle = "^1.5.15"
polars = "^0.18.6"
jax = "^0.4.13"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
