[tool.poetry]
name = "kaggle-titanic"
version = "0.1.0"
description = ""
authors = ["Gaetan Dubuc <gaet.dub1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10 <3.12"
jaxlib = "^0.4.13"
mlflow = "2.7.0"
plotly = "^5.15.0"
tensorflow-io = "0.31.0"
tensorflow = "^2.13.0"
seaborn = "^0.12.2"
feature-engine = "^1.6.1"
kaggle = "^1.5.16"
nbformat = "^5.9.2"
polars = "^0.18.6"
jax = "^0.4.13"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
ipykernel = "^6.25.2"
chardet = "^5.2.0"
pip = "^23.2.1"
matplotlib = "^3.5.1"
protobuf = "^4.24.3"
exceptiongroup = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src"]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "src/experimental",
  "src/typestubs",
]
ignore = ["src/oldstuff"]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"
venv = "env367"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.6"
pythonPlatform = "Linux"

executionEnvironments = [
  { root = "src/web", pythonVersion = "3.5", pythonPlatform = "Windows", extraPaths = [
    "src/service_libs",
  ] },
  { root = "src/sdk", pythonVersion = "3.0", extraPaths = [
    "src/backend",
  ] },
  { root = "src/tests", extraPaths = [
    "src/tests/e2e",
    "src/sdk",
  ] },
  { root = "src" },
]
